crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/expand_es_fluent_delegates_skipped_single_field_variant.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: tokens
---
impl ::es_fluent::FluentMessage for LoginError {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::Network(value) => {
                use ::es_fluent::FluentMessage as _;
                value.to_fluent_string_with(localize)
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_LoginError {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "LoginError",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
