crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/expand_es_fluent_generates_tokens_for_enum.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: enum_tokens
---
impl ::es_fluent::FluentMessage for Status {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::Ready => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "status-Ready",
                            ),
                        )
                    },
                    None,
                )
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_Status {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "Ready",
            ::es_fluent::registry::__macro::static_entry_id("status-Ready"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "Status",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::EsFluentChoice for Status {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::Ready => ::es_fluent::registry::__macro::static_variant_key("ready"),
        }
    }
}
