crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/expand_es_fluent_returns_compile_error_for_union_input.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: union_tokens
---
::core::compile_error! {
    "EsFluent can only be derived for structs and enums"
}
