crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/expand_es_fluent_returns_compile_errors_for_bad_struct_attribute.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
assertion_line: 236
expression: struct_tokens
---
compile_error!(
    "Attribute error in message struct container: `#[fluent(namespace = ...)]` has the wrong value shape for key `namespace` in message struct container `BadStruct`\nhelp: use a namespace rule, for example `namespace = \"ui\"` or `namespace = file`"
);
