crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/expand_es_fluent_uses_explicit_domain_for_generated_inventory.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: tokens
---
impl ::es_fluent::FluentMessage for UiGreeting {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::Greeting => {
                localize(
                    ::es_fluent::registry::__macro::static_message_key(
                        env!("CARGO_PKG_NAME"),
                        ::es_fluent::registry::__macro::static_domain("ui"),
                        ::es_fluent::registry::__macro::static_entry_id(
                            "ui_greeting-Greeting",
                        ),
                    ),
                    None,
                )
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_UiGreeting {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "Greeting",
            ::es_fluent::registry::__macro::static_entry_id("ui_greeting-Greeting"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "UiGreeting",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(
            env!("CARGO_PKG_NAME"),
            Some(::es_fluent::registry::__macro::static_domain("ui")),
        ),
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::EsFluentChoice for UiGreeting {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::Greeting => {
                ::es_fluent::registry::__macro::static_variant_key("greeting")
            }
        }
    }
}
