crates/es-fluent-derive/src/macros/derive_es_fluent/snapshots/expand_es_fluent_uses_explicit_domain_override_for_enum_lookup.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent/mod.rs
expression: tokens
---
impl ::es_fluent::FluentMessage for Languages {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::En => {
                localize(
                    ::es_fluent::registry::__macro::static_domain("es-fluent-lang"),
                    ::es_fluent::registry::__macro::static_entry_id("es-fluent-lang-en"),
                    None,
                )
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_Languages {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "En",
            ::es_fluent::registry::__macro::static_entry_id("es-fluent-lang-en"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "Languages",
        VARIANTS,
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::EsFluentChoice for Languages {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::En => ::es_fluent::registry::__macro::static_variant_key("en"),
        }
    }
}
